# full-stack-ai-diary

backend/: pyproject.toml
backend/app/: .env.template  main.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 2024_06_14_2048-aae3df3bc243_create_users_table.py  2024_06_15_1825-586c3f04b849_create_users_table.py
backend/app/api/: __init__.py
backend/app/api/api_v1/: __init__.py  users.py
backend/app/api/api_v1/ai/: helpers.py  views.py
backend/app/api/api_v1/auth/: helpers.py  validation.py  views.py
backend/app/api/api_v1/users/: crud.py  dependencies.py  schemas.py  views.py
backend/app/auth/: utils.py
backend/app/core/: config.py
backend/app/core/models/: __init__.py  user.py
frontend/: .gitignore  Dockerfile
frontend/app/: main.py
frontend/app/static/css/: login.css  registration.css  styles.css
frontend/app/static/js/: login.js  registration.js  script.js
frontend/app/templates/: index.html  login.html  registration.html
