[tool.poetry]
name = "ai-diary-backend"
version = "0.1.0"
description = "Backend for ai diary"
authors = ["misshanya <mishanyadev@gmail.com>", "inliktor <milopafai@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
pydantic = {extras = ["email"], version = "^2.7.4"}
pydantic-settings = "^2.3.3"
asyncpg = "^0.29.0"
alembic = "^1.13.1"
pyjwt = {extras = ["crypto"], version = "^2.8.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
